# GAU

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Test.json  checklist.md  context-notes.md  custom_nodes.json  main.json  run.bat  runwithoutbuild.bat
docs/: ARCHITECTURE_v2.md  SETUP_REQUIREMENTS.md  SRS_v2.html  SRS_v2.md  V2_STATUS.md  WASM_BUNDLING.md
exec_test_wasm/: adder.wasm
src/: main.cpp
src/app/: Main.cpp  WasmBuild.cpp  WasmBuild.h
src/core/: Type.h  TypeRegistry.cpp  TypeRegistry.h  Value.cpp  Value.h
src/exec/: BuiltinNodes.cpp  BuiltinNodes.h  Builtins.cpp  Builtins.h  ConversionNodes.cpp  ConversionNodes.h  ExecEngine.cpp  ExecEngine.h  FunctionInterface.cpp  FunctionInterface.h  FunctionNodes.cpp  FunctionNodes.h  FunctionOps.cpp  FunctionOps.h  Runtime.cpp  Runtime.h  StructEdit.cpp  StructEdit.h  StructNodes.cpp  StructNodes.h  VariableNodes.cpp  VariableNodes.h  WasmApiHeader.cpp  WasmApiHeader.h  WasmAuthoring.cpp  WasmAuthoring.h  WasmHost.cpp  WasmHost.h  WasmNodes.cpp  WasmNodes.h  WasmRuntime.cpp  WasmRuntime.h  WasmSignature.cpp  WasmSignature.h
src/interaction/: ActionMenu.cpp  ActionMenu.h  Align.cpp  Align.h  ClassEditorDialog.cpp  ClassEditorDialog.h  ConfirmSaveDialog.cpp  ConfirmSaveDialog.h  ContextMenu.cpp  ContextMenu.h  EditorInputEvent.h  FunctionEditorDialog.cpp  FunctionEditorDialog.h  HitTest.cpp  HitTest.h  HitTest2.cpp  HitTest2.h  InteractionFsm.cpp  InteractionFsm.h  LogPanel.cpp  LogPanel.h  Minimap.cpp  Minimap.h  NodeAlign.cpp  NodeAlign.h  NodeSearch.cpp  NodeSearch.h  PropertyPanel.cpp  PropertyPanel.h  TabBar.cpp  TabBar.h  UIRect.h  UIScale.h
src/io/: ProjectExport.cpp  ProjectExport.h  ProjectFile.cpp  ProjectFile.h  V1Import.cpp  V1Import.h
src/model/: BuiltinNodeClasses.cpp  Comment.h  EditorSettings.cpp  EditorSettings.h  ExecPinPolicy.cpp  ExecPinPolicy.h  Function.cpp  Function.h  Graph.cpp  Graph.h  GraphClipboard.cpp  GraphClipboard.h  GraphCommands.cpp  GraphCommands.h  GraphSerializer.cpp  GraphSerializer.h  GraphTypes.h  Guid.cpp  Guid.h  Ids.h  Link.h  Node.h  NodeClass.cpp  NodeClass.h  NodeClassLoader.cpp  NodeClassLoader.h  NodeClassV2.cpp  NodeClassV2.h  NodeGraph.cpp  NodeGraph.h  Project.h  PropertyText.cpp  PropertyText.h  UndoHistory.cpp  UndoHistory.h  UndoStack.cpp  UndoStack.h  UserType.cpp  UserType.h  Variable.h
src/platform/: GLLoader.cpp  GLLoader.h  PlatformClipboard.cpp  PlatformClipboard.h  PlatformConsole.cpp  PlatformConsole.h  PlatformFileDialog.cpp  PlatformFileDialog.h  PlatformInput.cpp  PlatformInput.h  PlatformNVG.cpp  PlatformNVG.h  PlatformProcess.cpp  PlatformProcess.h  PlatformWindow.cpp  PlatformWindow.h
src/render/: ActionMenuRenderer.cpp  ActionMenuRenderer.h  Canvas.cpp  Canvas.h  CategoryStyle.h  ClassEditorDialogRenderer.cpp  ClassEditorDialogRenderer.h  CommentRenderer.cpp  CommentRenderer.h  ConfirmSaveDialogRenderer.cpp  ConfirmSaveDialogRenderer.h  ContextMenuRenderer.cpp  ContextMenuRenderer.h  FunctionEditorRenderer.cpp  FunctionEditorRenderer.h  GraphLayout.cpp  GraphLayout.h  GraphRenderer.cpp  GraphRenderer.h  GridRenderer.cpp  GridRenderer.h  LinkRenderer.cpp  LinkRenderer.h  LogPanelRenderer.cpp  LogPanelRenderer.h  NanoVgPainter.cpp  NanoVgPainter.h  NodeLayoutCache.h  NodeRenderer.cpp  NodeRenderer.h  PinStyle.h  PropertyPanelRenderer.cpp  PropertyPanelRenderer.h  RenderCanvas.cpp  RenderCanvas.h  SelectionRenderer.cpp  SelectionRenderer.h  TabBarRenderer.cpp  TabBarRenderer.h
src/ui/: Geometry.h  Painter.h  Widget.cpp  Widget.h
tests/: AlignTests.cpp  CanvasTests.cpp  ConversionNodesTests.cpp  CoreTests.cpp  ExecPinPolicyTests.cpp  ExecTests.cpp  ExecVmTests.cpp  FunctionInterfaceTests.cpp  FunctionNodesTests.cpp  FunctionOpsTests.cpp  FunctionSerializeTests.cpp  ImportTests.cpp  InteractionTests.cpp  MinimapTests.cpp  ModelTests.cpp  NodeClassLoaderTests.cpp  NodeSearchTests.cpp  ProjectFileTests.cpp  ProjectIoTests.cpp  RenderTests.cpp  SerializerTests.cpp  StructEditTests.cpp  StructNodesTests.cpp  UiTests.cpp  UndoHistoryTests.cpp  VariableNodesTests.cpp  WasmAuthoringTests.cpp  WasmHostTests.cpp  WasmNodesTests.cpp  WasmSignatureTests.cpp
wasm/: AddVector3f.wasm  MakeStringFromVector3f.wasm  MakeStringVector3f.wasm  my_function.wasm
wasm_src/: AddVector3f.cpp  MakeStringFromVector3f.cpp  MakeStringVector3f.cpp  gau_api.h  my_function.cpp
